# mubofo

./: .gitignore  LICENSE  README.md  mypy.ini  pyproject.toml
mubofo/: __init__.py  _forests.py  _models.py  _trees.py  _utils.py
tests/: conftest.py  test__forests.py  test__models.py  test__trees.py  test_estimators.py  test_importances.py  test_predictions.py
