[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mubofo"
authors = [{name = "Dave Connelly", email = "dsconnelly@nyu.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version", "description"]
dependencies = [
    "numpy",
    "scikit-learn"
]

[project.urls]
Home = "https://github.com/dsconnelly/mubofo"
